# owui_client

./: .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: 404.html  index.html  objects.inv
docs/reference/SUMMARY/: index.html
docs/reference/client/: index.html
docs/reference/client_base/: index.html
docs/reference/models/: index.html
docs/reference/routers/: index.html
docs/reference/shortcuts/: index.html
docs/search/: search_index.json
refs/: owui_openapi_main.json  owui_test_util.py
scripts/: check_drift.py  fix_doc_links.py  gen_ref_pages.py
src/owui_client/: __init__.py  client.py  client_base.py  shortcuts.py
src/owui_client/models/: audio.py  auths.py  channels.py  chats.py  configs.py  evaluations.py  feedbacks.py  files.py  folders.py  functions.py  groups.py  images.py  knowledge.py  memories.py  messages.py  models.py  notes.py  oauth_sessions.py  ollama.py  openai.py  pipelines.py  prompts.py  retrieval.py  root.py  tags.py  tasks.py  tools.py  users.py  utils.py
tests/: conftest.py  test_audio.py  test_auths.py  test_channels.py  test_chats.py  test_configs.py  test_doc_dict_descs.py  test_doc_links.py  test_drift.py  test_evaluations.py  test_files.py  test_folders.py  test_functions.py  test_groups.py  test_images.py  test_knowledge.py  test_memories.py  test_models.py  test_notes.py  test_ollama.py  test_openai.py  test_pipelines.py  test_prompts.py  test_retrieval.py  test_root.py  test_shortcuts.py  test_tasks.py  test_tools.py  test_users.py  test_utils.py
tools/: open_webui_api.py
(+316 files in other folders)
