[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owui-client"
version = "1.1.1"
description = "Unofficial async Python client for the complete Open WebUI API."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "William Hogben", email = "whogben@gmail.com"}
]
keywords = ["open-webui", "api", "client"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Author" = "https://willhogben.com"
"Repository" = "https://github.com/whogben/owui_client"
"Issues" = "https://github.com/whogben/owui_client/issues"
"Documentation" = "https://whogben.github.io/owui_client/"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/owui_client"]

[tool.hatch.build.targets.sdist]
include = [
    "src/owui_client",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["refs", "scripts"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
